Add images to 60

--- a/content/8-posters/60.md
+++ b/content/8-posters/60.md
@@ -29,7 +29,9 @@ About thirty percent of the museum’s European painting collection has been dis
 
 ### Brief History of the Painting
 
-*The Sword of Damocles* is an early nineteenth-century Neoclassical painting by French artist Antoine Dubost ([**fig. 60.1**](fig-60-1)). This valuable piece of artwork was bequeathed to the museum by Sir Ratan Tata in 1921. The name of the artist was at that time unknown and remained a mystery for several decades. In 2004, art historian Dr. Richard Spear of the University of Maryland came to study the European paintings collection at the CSMVS. Based on his expertise on the subject, Dr. Spear suspected that the painting was the work of Dubost. This suspicion was reaffirmed two years later when the artist’s hidden signature was discovered during conservation efforts.
+*The Sword of Damocles* is an early nineteenth-century Neoclassical painting by French artist Antoine Dubost ([fig. 60.1](#fig-60-1)). This valuable piece of artwork was bequeathed to the museum by Sir Ratan Tata in 1921. The name of the artist was at that time unknown and remained a mystery for several decades. In 2004, art historian Dr. Richard Spear of the University of Maryland came to study the European paintings collection at the CSMVS. Based on his expertise on the subject, Dr. Spear suspected that the painting was the work of Dubost. This suspicion was reaffirmed two years later when the artist’s hidden signature was discovered during conservation efforts.
+
+{% figure 'fig-60-1' %}
 
 ### Condition and Conservation Status
 
@@ -45,7 +47,9 @@ Several years later, in 2011, the final treatment plan was developed under the l
 
 ### Technical Examination and Documentation
 
-The painting was extensively documented and examined under visible light, ultraviolet radiation, and infrared reflectography. The pigments were identified using scanning electron microscopy–energy dispersive X-ray analysis (SEM-EDX) and cross sections of samples taken from the painting were examined under a compound microscope. The examination using IR revealed pentimenti that showed changes to the positions of the hands and the sword itself. This helped in understanding not only the artist’s painting process but also what happened to the painting once it left the artist’s studio (for more on this, see [[Spear 2006]]). Examination of the cross section and SEM-EDX of the underside of the ground ([**fig. 60.2**](fig-60-2)) revealed that the fungus had infested not only the surface but also the lining fabric, glue layer, and original canvas support as well. It was thus important to remove the old lining and reline the painting.
+The painting was extensively documented and examined under visible light, ultraviolet radiation, and infrared reflectography. The pigments were identified using scanning electron microscopy–energy dispersive X-ray analysis (SEM-EDX) and cross sections of samples taken from the painting were examined under a compound microscope. The examination using IR revealed pentimenti that showed changes to the positions of the hands and the sword itself. This helped in understanding not only the artist’s painting process but also what happened to the painting once it left the artist’s studio (for more on this, see [[Spear 2006]]). Examination of the cross section and SEM-EDX of the underside of the ground ([fig. 60.2](#fig-60-2)) revealed that the fungus had infested not only the surface but also the lining fabric, glue layer, and original canvas support as well. It was thus important to remove the old lining and reline the painting.
+
+{% figure 'fig-60-2' %}
 
 ### Conservation Treatment
 
@@ -53,7 +57,11 @@ The fragile paint layer was faced using Beva 371 and tissue to protect it during
 
 A number of lining techniques were considered, while keeping in mind the local climate and the exhibition conditions in which the painting would be displayed. Glue-paste lining was eliminated due to the responsivity of the material to fluctuating relative humidity and its propensity to fungal growth. Wax-resin lining was rejected because of its penetrative nature and, potentially, the excessive amount of material required to create a bond.
 
-Beva 371 gel was used to reline the painting. The relative ease of application, its reversibility, and its potential to create a barrier against moisture (as suggested by the invited experts), made Beva 371 an apt choice for relining. Trevor Cumine, a specialist in the lining of oil paintings from the U.K., was specially invited to lead the lining process. Beva 371 was applied on the lining cloth and the back of the painting. A vacuum envelope was then created around the painting, and controlled, uniform heat applied. Once the lining was complete it was observed that the painting had become more flexible and the paint layer stable. The painting was then stretched and varnished, paint losses were filled and retouched (**figs. [60.3](fig-60-3), [60.4](fig-60-4)**). Finally, the painting was reframed, and it is currently on display.
+Beva 371 gel was used to reline the painting. The relative ease of application, its reversibility, and its potential to create a barrier against moisture (as suggested by the invited experts), made Beva 371 an apt choice for relining. Trevor Cumine, a specialist in the lining of oil paintings from the U.K., was specially invited to lead the lining process. Beva 371 was applied on the lining cloth and the back of the painting. A vacuum envelope was then created around the painting, and controlled, uniform heat applied. Once the lining was complete it was observed that the painting had become more flexible and the paint layer stable. The painting was then stretched and varnished, paint losses were filled and retouched (figs. [60.3](#fig-60-3), [60.4](#fig-60-4)). Finally, the painting was reframed, and it is currently on display.
+
+{% figure 'fig-60-3' %}
+
+{% figure 'fig-60-4' %}
 
 ### Results
 
@@ -75,7 +83,9 @@ A detailed condition report and a treatment plan was devised in 2012. During thi
 
 The paint flakes were first consolidated and the darkened varnish removed. The fragile paint surfaces were faced locally using methyl cellulose. The painting was then placed face down and the old lining and wax-resin layer removed using a combination of mechanical and solvent-based methods. When the old lining was being removed it was found that the wax application was not uniform. The adhesive was soft and easy to remove. Once previous old patches had been removed, the painting was ready for lining.
 
-Given the positive results of using Beva 371 for the *Sword of Damocles*, it was decided to follow the same process meticulously. The painting was hand-lined with Beva 371. The painting was then restretched, local facings removed, the paint losses filled, and it was varnished, retouched, and framed for display ([**fig. 60.5**](fig-60-5)).
+Given the positive results of using Beva 371 for the *Sword of Damocles*, it was decided to follow the same process meticulously. The painting was hand-lined with Beva 371. The painting was then restretched, local facings removed, the paint losses filled, and it was varnished, retouched, and framed for display ([fig. 60.5](#fig-60-5)).
+
+{% figure 'fig-60-5' %}
 
 ## Conclusion
 
