--- a/content/8-posters/61.md
+++ b/content/8-posters/61.md
@@ -20,13 +20,15 @@ abstract: "This case study discusses the extent of damage caused by termite atta
 
 ## Introduction
 
-Victoria Memorial Hall, in Kolkata, India, holds a vast collection of important historical artifacts and documents from the British Colonial period (eighteenth and nineteenth centuries) and houses one of the largest collections of Western oil paintings in India. One of the museum[’]{dir="rtl"}s major galleries is the Royal Gallery, which displays the large-scale painting *The State Entry into Delhi by Lord and Lady Curzon, Delhi Durbar (1903)* by Roderick Dempster MacKenzie (1865–1941) ([**fig. 61.1**](fig-61-1)). The conservation of this painting is of paramount importance to the museum and its staff.
+Victoria Memorial Hall, in Kolkata, India, holds a vast collection of important historical artifacts and documents from the British Colonial period (eighteenth and nineteenth centuries) and houses one of the largest collections of Western oil paintings in India. One of the museum[’]{dir="rtl"}s major galleries is the Royal Gallery, which displays the large-scale painting *The State Entry into Delhi by Lord and Lady Curzon, Delhi Durbar (1903)* by Roderick Dempster MacKenzie (1865–1941) ([fig. 61.1](#fig-61-1)). The conservation of this painting is of paramount importance to the museum and its staff.
+
+{% figure 'fig-61-1' %}
 
 A longstanding collaboration among experts in the structural conservation of paintings and the museum’s conservation department has been ongoing since the 1990s. The Calcutta Tercentenary Trust project (1990–2002) allowed a team of British, European, and American visiting conservators to instruct Indian colleagues in current lining practices applicable to Kolkata’s climate. More recent training of members of the conservation team of the museum through the Indian Conservation Fellowship Program has paved the way for a more updated approach. These international collaborations and supports allowed the museum conservation team to devise a treatment plan suitable for this large-scale canvas painting.
 
 ## Historical Background of *Delhi Durbar 1903*
 
-The term *durbar* was used in Mughal India to refer to a meeting of the ruler[’]{dir="rtl"}s court or council; it was adopted by the British to refer to a ceremonial gathering that demonstrated loyalty to the crown.[^1] The painting that is the subject of the case study depicts the second such occasion; a previous Durbar was held in 1877 to proclaim Queen Victoria Empress of India. Following Victoria[’]{dir="rtl"}s death in 1901, the 1903 Durbar marked the declaration of Edward VII and Queen Alexandra as Emperor and Empress of India. Though the royal couple did not attend the ceremony, they were represented by Edward[’]{dir="rtl"}s brother, the Duke of Connaught, seen riding on the second elephant in the scene.
+The term *durbar* was used in Mughal India to refer to a meeting of the ruler[’]{dir="rtl"}s court or council; it was adopted by the British to refer to a ceremonial gathering that demonstrated loyalty to the crown.[^1] The painting that is the subject of the case study depicts the second such occasion; a previous Durbar was held in 1877 to proclaim Queen Victoria Empress of India. Following Victoria’s death in 1901, the 1903 Durbar marked the declaration of Edward VII and Queen Alexandra as Emperor and Empress of India. Though the royal couple did not attend the ceremony, they were represented by Edward’s brother, the Duke of Connaught, seen riding on the second elephant in the scene.
 
 The viceroy, Lord Curzon, commissioned the Anglo-American artist Roderick MacKenzie (1865–1941) to paint the ceremonial procession. Lord Curzon is depicted seated on the elephant leading the procession in the painting. The entire event culminated in a grand coronation ball attended only by the highest-ranking guests and overseen by Lord Curzon and the stunning Lady Curzon in her glittering jewels and regal peacock gown.
 
@@ -48,7 +50,12 @@ As this is the second-largest painting in Victoria Memorial’s collection, hand
 
 ## Findings and Observations
 
-After removing the tape and Tyvek, removal of the stretcher was initiated. Within a couple of days, the stretcher had been removed and separated from the painting. Then the extent of damage could be observed from the back side ([**fig. 61.2**](fig-61-2)). One positive about the stretcher was that hardwood had been used to construct it; this prevented the termites from chewing into the wood, so only a mud channel had developed on the stretcher surface ([**fig. 61.3**](fig-61-3)). But due to the organic nature of the canvas, the termites had eaten away the canvas cloth up to the ground layer, where the channel developed.
+After removing the tape and Tyvek, removal of the stretcher was initiated. Within a couple of days, the stretcher had been removed and separated from the painting. Then the extent of damage could be observed from the back side ([fig. 61.2](#fig-61-2)). One positive about the stretcher was that hardwood had been used to construct it; this prevented the termites from chewing into the wood, so only a mud channel had developed on the stretcher surface ([fig. 61.3](#fig-61-3)). But due to the organic nature of the canvas, the termites had eaten away the canvas cloth up to the ground layer, where the channel developed.
+
+{% figure 'fig-61-2' %}
+
+{% figure 'fig-61-3' %}
+
 
 It was also noticed that at the time of previous conservation activity, extra unpainted edge areas had been removed and original painted portions were used as fold-over edges and nailed through to attach the canvas to the stretcher. Therefore, the exact dimensions of the painting at the time of execution are unknown.
 
@@ -60,17 +67,21 @@ Numerous patches (also undocumented) had been applied to the reverse of the canv
 
 Once the condition was assessed, a treatment proposal was prepared that included strip-lining. For preparation of the strip-lining, requisite conservation steps like flattening the edges of the canvas, removing the old patches, and manual cleaning of the surface of the canvas were undertaken. In order to clean the canvas, at the outset dusting and cleaning was done with a vacuum cleaner. Gently rubbing ground eraser powder on the reverse of the original canvas delivered a good result in removing the dirt from the back.
 
-Manual cleaning with scalpels was also done to remove the old patches and their residual dry adhesive ([**fig. 61.4**](fig-61-4)). It was decided not to remove the vertical patches in one go, as it was observed that they held the original canvas together. The termite damage had eaten away at the original support, effectively splitting the canvas into two almost independent sections. Had the vertical patches been removed all at once, it could have made it difficult or impossible to exactly align the two halves of the painting. Therefore, the patches around the perimeter of the support were removed first, leaving the central ones intact. Then the strip-lining of Beva 371 and sailcloth was applied to the perimeter.
+Manual cleaning with scalpels was also done to remove the old patches and their residual dry adhesive ([fig. 61.4](#fig-61-4)). It was decided not to remove the vertical patches in one go, as it was observed that they held the original canvas together. The termite damage had eaten away at the original support, effectively splitting the canvas into two almost independent sections. Had the vertical patches been removed all at once, it could have made it difficult or impossible to exactly align the two halves of the painting. Therefore, the patches around the perimeter of the support were removed first, leaving the central ones intact. Then the strip-lining of Beva 371 and sailcloth was applied to the perimeter.
+
+{% figure 'fig-61-4' %}
 
 An experiment of overlapping the sailcloth on every corner was done, where cloth from both sides was merged in order to maintain equal thickness and tension in each corner. This prevented problems when re-stretching the canvas to its stretcher. Once the perimeter was stabilized with the strip-lining, the old patches in the center of the support could be removed. In this way, the potential alignment problem was avoided, and the damage to the center could be handled. The old patches could be removed manually very easily. Manual cleaning of dried adhesives revealed when removing was also carried out.
 
-In some places, where termites had ingested the canvas fiber entirely, a layer of splintered cotton wool fiber with Beva 371 binder and thin synthetic cloth was applied to maintain an equal level with nearby areas. The termite-damaged area was repaired sufficiently by applying two larger vertical patches and four smaller ones. The same adhesive and patch material was used for all support additions. After completion of all additions, the whole strip-lining was executed successfully ([**fig. 61.5**](fig-61-5)).
+In some places, where termites had ingested the canvas fiber entirely, a layer of splintered cotton wool fiber with Beva 371 binder and thin synthetic cloth was applied to maintain an equal level with nearby areas. The termite-damaged area was repaired sufficiently by applying two larger vertical patches and four smaller ones. The same adhesive and patch material was used for all support additions. After completion of all additions, the whole strip-lining was executed successfully ([fig. 61.5](#fig-61-5)).
+
+{% figure 'fig-61-5' %}
 
 The second phase of conservation started with necessary cleaning and repairing of the stretcher by removing the nails, followed by applying a loose-lining and then restretching the painting. In line with our decision to apply the loose-lining, a market survey was carried out to find a wide, starch-free cloth. Ultimately, a cloth fitting our requirements was found at Burra Bazar Cotton Street, in Kolkata. One vertical seam was necessary to get the required dimension, and then the loose lining was completed.
 
 Following the loose lining the original canvas was restretched. To protect the edges of the painted area of fold-over edges, a strip of acid-free cardboard the same width as stretcher was placed as a buffer between the tacks and the paint surface before executing the nailing. This buffer material will help to keep the outer frame from abrading the original painted portion at the fold-over edge. The back side of the painting was also given a Tyvek cover to avoid further accumulation of dust and dirt.
 
-After the painting was put back against the wall, a few interferences that occurred during the structural repair due to loss of the old filler were refilled successfully. The conservation of the painting was completed with required reintegration and varnish matching locally (see [**fig. 61.1**](fig-61-1)).
+After the painting was put back against the wall, a few interferences that occurred during the structural repair due to loss of the old filler were refilled successfully. The conservation of the painting was completed with required reintegration and varnish matching locally (see [fig. 61.1](#fig-61-1)).
 
 ## Conclusion
 
