add images to 62

--- a/content/8-posters/62.md
+++ b/content/8-posters/62.md
@@ -59,33 +59,43 @@ Cross sections were prepared, and four priming layer stratigraphies were identif
 
 ### Binder
 
-The top surface of priming layers was characterized using ATR-FTIR ([**table 62.1**](table-62-1), [**fig. 62.1**](fig-62-1)) ([[Osmond et al. 2018]]). At this surface layer, forty-nine of the fifty-three canvas samples contained synthetic polymer binders and four samples contained oil priming. Styrenated-acrylic predominated as a binder, followed by acrylic and acrylic–polyvinyl acrylic (PVA) binders. No alkyd binders were found.
+The top surface of priming layers was characterized using ATR-FTIR ([table 62.1](#table-62-1), [fig. 62.1](#fig-62-1)) ([[Osmond et al. 2018]]). At this surface layer, forty-nine of the fifty-three canvas samples contained synthetic polymer binders and four samples contained oil priming. Styrenated-acrylic predominated as a binder, followed by acrylic and acrylic–polyvinyl acrylic (PVA) binders. No alkyd binders were found.
+
+**figure 'table-62-1'**
+
+{% figure 'fig-62-1' %}
 
 Py-GCMS provided further detail of synthetic polymer binder constituents, including verification of the use of seven different acrylic monomers. Within the group of styrenated-acrylics, styrene– n-butyl acrylate (BA) predominated (37%), and within the group of “pure” acrylics, only ethyl acrylate–methyl methacrylate (EA-MMA) and BA-MMA were found, with a slightly higher occurrence of EA-MMA. One EA-MMA priming showed significant amounts of diethylene glycol dibenzoate plasticizer. Within the group of PVA-acrylic binders, some were copolymerized with vinyl versatate (VeoVa). Surfactants such as polyethylene oxide (PEO) ([[Scalarone and Chiantore 2004]]) were not observed with ATR-FTIR.
 
-Priming layer combinations varied ([**fig. 62.2**](fig-62-2)). Double priming layers included acrylic over styrenated acrylic ([**fig. 62.2b**](fig-62-2)), acrylic over acrylic-PVA ([**fig. 62.2d**](fig-62-2)), and oil over styrenated acrylic ([**fig. 62.3**](fig-62-3)).
+Priming layer combinations varied ([fig. 62.2](#fig-62-2)). Double priming layers included acrylic over styrenated acrylic ([fig. 62.2b](#fig-62-2)), acrylic over acrylic-PVA ([fig. 62.2d](#fig-62-2)), and oil over styrenated acrylic ([fig. 62.3](#fig-62-3)).
 
-Variations were observed between ATR-FTIR and Py-GCMS data, including a significantly higher incidence of PVA detected with Py-GCMS. This was found to correlate with the presence of PVA in lower priming layers not captured by the surface-only ATR-FTIR. Thin surface layers were sometimes difficult to separate from other similarly colored layers for Py-GCMS analysis ([**fig. 62.2d**](fig-62-2)) ([[Osmond et al. 2018]]).
+{% figure 'fig-62-2' %}
 
-In total, thirty-four different copolymer binder combinations in the upper layer were found in the surface layer of the forty-nine synthetic-primed samples—indicating a wide variety of formulations and subsequent properties. The history of synthetic emulsion binders and copolymer properties is well documented, including in conservation literature ([[Scalarone & Chiantore 2004]]; [[Learner 2004]]; [[Croll 2007]]; [[Standevan 2011]]), which describes how copolymers are formulated to provide optimal coating properties. For example, adding monomers that have a higher glass transition temperature (Tg), such as styrene (or MMA), to a “soft” acrylic monomer such as n-butyl acrylate results in a stiffer and possibly more heat tolerant priming, depending on the monomer ratio ([**table 62.2**](table-62-2)).
+{% figure 'fig-62-3' %}
+
+Variations were observed between ATR-FTIR and Py-GCMS data, including a significantly higher incidence of PVA detected with Py-GCMS. This was found to correlate with the presence of PVA in lower priming layers not captured by the surface-only ATR-FTIR. Thin surface layers were sometimes difficult to separate from other similarly colored layers for Py-GCMS analysis ([fig. 62.2d](#fig-62-2)) ([[Osmond et al. 2018]]).
+
+In total, thirty-four different copolymer binder combinations in the upper layer were found in the surface layer of the forty-nine synthetic-primed samples—indicating a wide variety of formulations and subsequent properties. The history of synthetic emulsion binders and copolymer properties is well documented, including in conservation literature ([[Scalarone & Chiantore 2004]]; [[Learner 2004]]; [[Croll 2007]]; [[Standevan 2011]]), which describes how copolymers are formulated to provide optimal coating properties. For example, adding monomers that have a higher glass transition temperature (Tg), such as styrene (or MMA), to a “soft” acrylic monomer such as n-butyl acrylate results in a stiffer and possibly more heat tolerant priming, depending on the monomer ratio ([table 62.2](#table-62-2)).
+
+**figure 'table-62-2'**
 
 ## Pigments and Fillers
 
-Fourteen different pigment and filler combinations were identified. The most frequent combinations are detailed in [**table 62.1**](table-62-1). Two-thirds of synthetic primings were composed of titanium dioxide and chalk, some also contained talc. Nine percent of samples contained chalk only. Pigmentation of layers also varied within samples; for example, titanium white was sometimes found only in the top of double-layered priming ([**fig. 62.2b**](fig-62-2)).
+Fourteen different pigment and filler combinations were identified. The most frequent combinations are detailed in [table 62.1](#table-62-1). Two-thirds of synthetic primings were composed of titanium dioxide and chalk, some also contained talc. Nine percent of samples contained chalk only. Pigmentation of layers also varied within samples; for example, titanium white was sometimes found only in the top of double-layered priming ([fig. 62.2b](#fig-62-2)).
 
 ### Oil Priming and Zinc Soaps
 
 The four oil-primed samples were double primed. Three were oil over acrylic or acrylic-PVA, and one contained two oil layers. Barium sulfate, titanium white, and calcium carbonate were found in oil primings. Additionally, zinc was detected in three of the oil- primed samples, and zinc soaps (amorphous and/or crystalline) were detected at the surface of these samples.
 
-Amorphous zinc carboxylates (broadband centered 1571 cm^−1^) were found at the top surface of the double oil priming where zinc oxide was present only in the underlayer. This suggests in situ formation of zinc soaps and migration from the lower layer to the surface ([**fig. 62.3a**](fig-62-3)).
+Amorphous zinc carboxylates (broadband centered 1571 cm^−1^) were found at the top surface of the double oil priming where zinc oxide was present only in the underlayer. This suggests in situ formation of zinc soaps and migration from the lower layer to the surface ([fig. 62.3a](#fig-62-3)).
 
-Crystalline zinc soaps (1538 cm^−1^) were detected at the surface of two oil-primed canvases with acrylic-PVA underlayers. The oil priming contained no zinc oxide, and thus zinc stearate was likely a constituent in the priming formulation ([**fig. 62.3b**](fig-62-3)). These results are important, as zinc soaps at the surface of oil-primed canvases may pose a risk to subsequent oil-paint adhesion ([[Osmond 2019]]).
+Crystalline zinc soaps (1538 cm^−1^) were detected at the surface of two oil-primed canvases with acrylic-PVA underlayers. The oil priming contained no zinc oxide, and thus zinc stearate was likely a constituent in the priming formulation ([fig. 62.3b](#fig-62-3)). These results are important, as zinc soaps at the surface of oil-primed canvases may pose a risk to subsequent oil-paint adhesion ([[Osmond 2019]]).
 
 ## Canvas
 
-Fiber analysis showed good correlation with the information provided by manufacturers. Cotton was the most prevalent fiber, followed by linen. Polythene terephthalate (PET) and PET-cotton blends were less common ([**table 62.1**](table-62-1)).
+Fiber analysis showed good correlation with the information provided by manufacturers. Cotton was the most prevalent fiber, followed by linen. Polythene terephthalate (PET) and PET-cotton blends were less common ([table 62.1](#table-62-1)).
 
-Three weave patterns were identified: plain weave (1 x 1), half basket (2 x 1), and full basket (2 x 2) ([**table 62.1**](table-62-1)). Cotton was typically found as half basket, while linen, PET, and PET-cotton blends were mostly plain weave. Twenty-five percent of cotton samples had a thread count of 10 x 30 threads/cm^2^; otherwise, thread counts varied.
+Three weave patterns were identified: plain weave (1 x 1), half basket (2 x 1), and full basket (2 x 2) ([table 62.1](#table-62-1)). Cotton was typically found as half basket, while linen, PET, and PET-cotton blends were mostly plain weave. Twenty-five percent of cotton samples had a thread count of 10 x 30 threads/cm^2^; otherwise, thread counts varied.
 
 Uniaxial tensile strength testing of canvas samples indicated that the type or number of priming layers did not significantly affect tensile strength. The force at maximum for cotton and cotton-PET (56—258 N) was generally lower than for linen and PET (191—514 N) regardless of priming layers. The modulus of elasticity of the samples varied, generally showing a lower modulus of elasticity in the warp direction than the weft, aligning with research by others ([[Young and Jardine 2012]]).
 
