--- a/content/8-posters/63.md
+++ b/content/8-posters/63.md
@@ -32,7 +32,11 @@ abstract: "A large number of cultural properties were damaged in the March 2011 
 
 ## Background
 
-A large number of cultural properties were damaged in the March 2011 tsunami, an unprecedented natural disaster that devastated Japan’s Tohoku region ([**fig. 63.1**](fig-63-1)). The process of conserving these properties has lasted nine years and remains ongoing to this day. At that time, I was working at the Conservation and Preservation Department of Tokyo National Museum, and I was put in charge of research looking into how to desalinate canvas paintings as part of the second stage of the rescue process. Specifically, I was entrusted with the task of restoring fifty-three canvas paintings from Rikuzentakata City Museum. These paintings were wrapped in plastic coverings at the time of the disaster ([**fig. 63.2**](fig-63-2)). After the tsunami, they absorbed large volumes of grime and moisture and were kept in this moist state. As a result, mold grew across the surfaces, and there was a considerable amount of paint flaking.
+A large number of cultural properties were damaged in the March 2011 tsunami, an unprecedented natural disaster that devastated Japan’s Tohoku region ([fig. 63.1](#fig-63-1)). The process of conserving these properties has lasted nine years and remains ongoing to this day. At that time, I was working at the Conservation and Preservation Department of Tokyo National Museum, and I was put in charge of research looking into how to desalinate canvas paintings as part of the second stage of the rescue process. Specifically, I was entrusted with the task of restoring fifty-three canvas paintings from Rikuzentakata City Museum. These paintings were wrapped in plastic coverings at the time of the disaster ([fig. 63.2](#fig-63-2)). After the tsunami, they absorbed large volumes of grime and moisture and were kept in this moist state. As a result, mold grew across the surfaces, and there was a considerable amount of paint flaking.
+
+{% figure 'fig-63-1' %}
+
+{% figure 'fig-63-2' %}
 
 As a first step in the rescue process, remedial treatment was undertaken to remove the surface grime and mold and to fumigate the paintings ([[Ito 2014]]). However, it was impossible to remove the embedded grime and salt without using water, so those were left untreated during this stage. Chloride compounds left on the canvasses after the tsunami ionized, and a certain amount of moisture was needed to remove them. Given the assumption that canvas shrinkage is a major factor impacting the status of the paints, the question arose as to how much shrinkage was tolerable. Based on research already carried out overseas, the shrinkage rate was set at within 0.5% ([[Mecklenburg 2007a]]; [[Mecklenburg 2007b]]), and we set a goal of minimizing the damage to the paint layer by minimizing the shrinkage as much as possible.
 
@@ -42,7 +46,9 @@ After carrying out several experiments, our research focused on acrylic painting
 
 The desalination work to remove the embedded grime and salt from the canvasses could not be undertaken with any solvent besides water. However, there was a danger water might cause the canvas to shrink or the surface paints to peel off. We focused on the conservation state of fifteen large acrylic paintings among those canvas paintings damaged by the tsunami.
 
-Hardly any of the wooden frames were warped, even with the larger paintings, while the canvasses had only minimal shrinkage and there was no paint flaking. As a result, it was adjudged that shrinkage could probably be kept to a minimum even if water was applied to these canvasses. We prepared a life-size mock-up of a large acrylic painting, stretched it over an actual stretcher, and applied water ([**fig. 63.3**](fig-63-3)). Hardly any shrinkage was observed ([[Tsuchiya et al. 2014]]).
+Hardly any of the wooden frames were warped, even with the larger paintings, while the canvasses had only minimal shrinkage and there was no paint flaking. As a result, it was adjudged that shrinkage could probably be kept to a minimum even if water was applied to these canvasses. We prepared a life-size mock-up of a large acrylic painting, stretched it over an actual stretcher, and applied water ([fig. 63.3](#fig-63-3)). Hardly any shrinkage was observed ([[Tsuchiya et al. 2014]]).
+
+{% figure 'fig-63-3' %}
 
 Based on this, we undertook a desalination trial using the absolute minimum amount of moisture. We first tried a treatment method using gel sheets. Gel sheets with a 1.5% concentration and a 7:2:1 ratio of carrageenan (a seaweed-based emulsifying agent), xanthan gum, and locust bean gum were chosen for their ease of use and suitability for the syneresis process. A 16 x 11 x 2 cm sheet was pressed against the rear side of the canvas and left for about thirty minutes before being replaced with a new sheet. This process was carried out twice. However, the chlorine (CI) values of the canvas (rear side) remained at between 50%–80% of the initial values ([[Tsuchiya et al. 2015]]). This was because the gel sheets alone did not have sufficient moisture to remove the salt and other material that had seeped into the canvas fiber.
 
@@ -50,29 +56,55 @@ We next examined the blotter-washing technique used in paper conservation. After
 
 ## Preparing a Calibration Curve for the Cotton Cloth Used for the Canvas
 
-The residual chlorine CI values were measured using X-ray fluorescence spectroscopy (XFR). The obtained values were in centipoise (cP), so a calibration curve was prepared to convert these into parts-per-million (ppm) values. As the affected acrylic painting canvas was on cotton, we prepared a cotton cloth for our trials. We also prepared CI water solutions of 1, 10, 50, 100, 200, 300, 500, 700, 1000, 10,000, 35,000, and 100,000 ppm ([**fig. 63.4**](fig-63-4)). These were applied to pieces of the cotton cloth and then dried. These were set as reference standards and measured using XRF. We targeted a figure of 33 ppm (the CI value of drinking water in Tokyo) for the residual CI density on the post-treatment canvas ([**fig. 63.5**](fig-63-5)).
+The residual chlorine CI values were measured using X-ray fluorescence spectroscopy (XFR). The obtained values were in centipoise (cP), so a calibration curve was prepared to convert these into parts-per-million (ppm) values. As the affected acrylic painting canvas was on cotton, we prepared a cotton cloth for our trials. We also prepared CI water solutions of 1, 10, 50, 100, 200, 300, 500, 700, 1000, 10,000, 35,000, and 100,000 ppm ([fig. 63.4](#fig-63-4)). These were applied to pieces of the cotton cloth and then dried. These were set as reference standards and measured using XRF. We targeted a figure of 33 ppm (the CI value of drinking water in Tokyo) for the residual CI density on the post-treatment canvas ([fig. 63.5](#fig-63-5)).
+
+{% figure 'fig-63-4' %}
+
+{% figure 'fig-63-5' %}
 
 ## The Desalination Work
 
-The target work was an acrylic painting by Masayoshi Nameki (**figs. [63.6](fig-63-6), [63.7](fig-63-7)**). The canvas had already been removed from the original stretcher. Polyester strips were attached to the edges of the canvas (strip-lining) and it was remounted on a larger stretcher. The size of the canvas was recorded before applying water, and then the desalination process was carried out.
+The target work was an acrylic painting by Masayoshi Nameki (figs. [63.6](#fig-63-6), [63.7](#fig-63-7)). The canvas had already been removed from the original stretcher. Polyester strips were attached to the edges of the canvas (strip-lining) and it was remounted on a larger stretcher. The size of the canvas was recorded before applying water, and then the desalination process was carried out.
 
-1.  Water mixed with ethyl alcohol was sprayed onto the back of the canvas to apply moisture to the entire surface ([**fig. 63.8**](fig-63-8)).
+{% figure 'fig-63-6' %}
 
-2.  The entire surface was covered with dampened blotting paper and left for eight minutes ([**fig. 63.9**](fig-63-9)).
+{% figure 'fig-63-7' %}
 
-3.  A highly absorbent resin sheet was placed over the blotting paper for two minutes to soak up the grime and salt absorbed by the blotting paper ([**fig. 63.10**](fig-63-10)).
+1.  Water mixed with ethyl alcohol was sprayed onto the back of the canvas to apply moisture to the entire surface ([fig. 63.8](#fig-63-8)).
+
+{% figure 'fig-63-8' %}
+
+2.  The entire surface was covered with dampened blotting paper and left for eight minutes ([fig. 63.9](#fig-63-9)).
+
+{% figure 'fig-63-9' %}
+
+3.  A highly absorbent resin sheet was placed over the blotting paper for two minutes to soak up the grime and salt absorbed by the blotting paper ([fig. 63.10](#fig-63-10)).
+
+{% figure 'fig-63-10' %}
 
 4.  The blotting paper and resin sheet were removed and steps 1–3 were repeated five or six times. After the first application, the water that was sprayed on did not contain alcohol.
 
 5.  A thin paper sheet was placed against the surface and sprayed with water. This process was carried out twice to remove the absorbed grime and salt.
 
-6.  The salinity concentration levels of the chloride test paper were measured each time ([**fig. 63.11**](fig-63-11), [**fig. 63.12**](fig-63-12), [**table 63.1**](table-63-1)).
+6.  The salinity concentration levels of the chloride test paper were measured each time ([fig. 63.11](#fig-63-11), [fig. 63.12](#fig-63-12), [table 63.1](#table-63-1)).
 
-7.  Canvas shrinkage was recorded directly after each application of water, after the desalination process was totally finished, and the following day, when the canvas had dried ([**fig. 63.13**](fig-63-13)).
+{% figure 'fig-63-11' %}
+
+{% figure 'fig-63-12' %}
+
+**figure 'table-63-1'**
+
+7.  Canvas shrinkage was recorded directly after each application of water, after the desalination process was totally finished, and the following day, when the canvas had dried ([fig. 63.13](#fig-63-13)).
+
+{% figure 'fig-63-13' %}
 
 ## Conclusion and Future Issues
 
-The blotting method can be used to remove residual salt from acrylic paintings painted thinly on cotton-fiber canvases. The shrinkage rate of the canvas can by kept to within 0.5% of the total surface by maintaining the painting under tension during the treatment ([**table 63.2**](table-63-2), [**table 63.3**](table-63-3)).
+The blotting method can be used to remove residual salt from acrylic paintings painted thinly on cotton-fiber canvases. The shrinkage rate of the canvas can by kept to within 0.5% of the total surface by maintaining the painting under tension during the treatment ([table 63.2](#table-63-2), [table 63.3](#table-63-3)).
+
+**figure 'table-63-2'**
+
+**figure 'table-63-3'**
 
 Researchers outside of Japan have been aware of the dangers of using excess moisture when cleaning paintings since the 1980s. In particular, there has been considerable debate about problems involving acrylic paints (a relatively new painting material), such as the swelling of resins due to the impact of various additives ([[Jablonski et al. 2003]]; [[Tumosa and Mecklenburg 2004]]; [[Ormsby and Learner 2009]]; [[Doménech-Carbó et al. 2013]]; [[Toriumi 2018]]; [[Hackney, Stephen. 2020]]). Additive agents in acrylic paints tend to rise to the surface of paints, so these paintings probably lost these additives as a result of the tsunami. Furthermore, a water-based treatment was also used during the desalination process. In light of these factors, from here on we will need to ascertain the damage to the paints by carrying out experiments while preparing specimens.
 
